# precompiled-adaptor

./: Cargo.toml
src/: lib.rs
